test/typecheck/pass/plus_one_unify.sail

val f2 : forall 'm, 'm in {0,1}. (int('m+1)) -> int

function f2(_) = 3

let x = f2(1)